--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "gulp-file-include": "^2.3.0",
         "gulp-image": "^6.3.1",
         "gulp-imagemin": "^8.0.0",
+        "just-validate": "^3.1.1",
         "normalize.css": "^8.0.1"
     }
 }
